--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "google-cloud": "^0.44.0",
     "socket.io": "^1.6.0"
   }
 }
